@@ -39,6 +39,7 @@ Version 1.4.8 - CVS
     this out.
   - Fixed subscription of new 'noselect' folders (#1315912).
   - Moving the development documentation to the documentation module.
+  - Drop dead code in validate.php once used for some old obscure bug.
 
 Version 1.4.7 - 4th July 2006
 -----------------------------
